--- a/src/index.html
+++ b/src/index.html
@@ -3,20 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title>festival playlists</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
 
     <!-- Le styles -->
     <link href="css/bootstrap.css" rel="stylesheet">
+    <!--<link href="css/flexigrid.css" rel="stylesheet">-->
+    <link href="css/main.css" rel="stylesheet">
     <style type="text/css">
       body {
         padding-top: 60px;
         padding-bottom: 40px;
       }
     </style>
-    <link href="css/bootstrap-responsive.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -49,7 +48,7 @@
     <div class="container">
       <h2>Create Your Own</h2>
       <div class="row">
-        <div class="span12">
+        <div class="span6">
           <h3>Select a festival ...</h3>
           <p>
             <select id="festivals">
@@ -60,9 +59,9 @@
             </select>
           </p>
         </div>
-      </div>
-      <div class="row">
-        <div class="span12">
+      
+
+        <div class="span6">
           <h3>... and stages, to generate ...</h3>
           <p>
             <select id="stages" multiple>
@@ -72,17 +71,23 @@
        </div>
       </div>
 
-      <div class="row">
-        <div class="span12">
-          <h3>... a playlist!</h3>
-          <iframe id="spotify" src="" width="400" height="80" frameborder="0" allowtransparency="true"></iframe>
-        </div>
-      </div>
 
       <div class="row">
-        <div class="span12">
+        <div class="span6">
+          <h3>... a playlist!</h3>
+
+          <div id="playlistContainer" class="playlistContainer">
+            <table id="playlistDisplay">
+              <tbody></tbody>
+            </table>
+          </div>
+        </div>
+      
+        <div class="span6">
           <h3>... save it?</h3>
-          <a class="btn" disabled>save to spotify</a>
+          <a id="savePlaylist" class="btn">save as a playlist?</a>
+          <h3>... or play it?</h3>
+          <a id="playPlaylist" class="btn">play in spotify now?</a>
         </div>
       </div>
 
@@ -98,6 +103,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="js/jquery.js"></script>
+    <!--<script src="js/flexigrid.js"></script>-->
     <script src="js/spotify-playlist.js"></script>
 
   </body>
