Applying box styling to offline message

--- a/src/index.html
+++ b/src/index.html
@@ -34,8 +34,10 @@
     </div>
 
     <div class="offlineContainer">
-      <h1>Festival Playlists does not work in offline mode</h1>
-      <h2>Please check your connection / disabled offline mode</h1>
+      <div class="message box">
+        <h1>Festival Playlists does not work in offline mode</h1>
+        <span>Please check your connection or disable offline mode</span>
+      </div>
     </div>
 
     <div class="container">
