--- a/src/index.html
+++ b/src/index.html
@@ -72,8 +72,7 @@
       </div>
     </div>
 
-    <script src="js/jquery.js"></script>
-    <script src="js/spotify-playlist.js"></script>
+    <script data-main="js/app.js" src="js/require.js"></script>
 
   </body>
 </html>
