--- a/src/index.html
+++ b/src/index.html
@@ -7,24 +7,14 @@
     <meta name="author" content="">
 
 
-    <link href="sp://resources/css/shared.css" rel="stylesheet">
-    <link href="sp://resources/css/eve.css" rel="stylesheet">
-    <link href="sp://resources/css/api.css" rel="stylesheet">
+    <link rel="stylesheet" href="$views/css/buttons.css">
+    <link rel="stylesheet" href="$views/css/image.css">
+    <link rel="stylesheet" href="$views/css/list.css">
+    <link rel="stylesheet" href="$views/css/popup.css">
+    <link rel="stylesheet" href="$views/css/tabbar.css">
+    <link rel="stylesheet" href="$views/css/throbber.css">
     
     <link href="css/main.css" rel="stylesheet">
-
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-
-    <!-- Fav and touch icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
-    <link rel="shortcut icon" href="assets/ico/favicon.png">
-  </head>
 
   <body>
 
@@ -72,7 +62,7 @@
       </div>
     </div>
 
-    <script data-main="js/app.js" src="js/require.js"></script>
+    <script src="js/app.js"></script>
 
   </body>
 </html>
