Changed selects into radio/checkboxes

--- a/src/index.html
+++ b/src/index.html
@@ -34,19 +34,13 @@
 
       <div class="festivals box">
         <h2>Select a festival ...</h2>
-        <p>
-          <select id="festivalsList">
-            <option label="Select a festival">
-          </select>
-        </p>
+        <ul id="festivalsList"></ul>
       </div>
 
       <div class="stages box">
         <h2>... and stages, to generate ...</h2>
         <p>
-          <select id="stagesList" multiple>
-            <option label="... and stages ...">
-          </select>
+          <ul id="stagesList"></ul>
         </p>
      </div>
 
