Styling up checkboxes and radio buttons.

--- a/src/index.html
+++ b/src/index.html
@@ -33,12 +33,12 @@
     <div class="container">
 
       <div class="festivals box">
-        <h2>Select a festival ...</h2>
+        <h2>1. Select a festival ...</h2>
         <ul id="festivalsList"></ul>
       </div>
 
       <div class="stages box">
-        <h2>... and stages, to generate ...</h2>
+        <h2>2. ... and stages, to generate ...</h2>
         <p>
           <ul id="stagesList"></ul>
         </p>
@@ -46,7 +46,7 @@
 
 
       <div class="playlists box">
-        <h2>... your festival playlist!</h2>
+        <h2>3. ... your festival playlist!</h2>
 
         <div id="playerNode"></div>
         <div id="playlistContainer" class="playlistContainer">
