Added support for subscribe button. Creating new playlist to subscribe with, using tracks from temporary playlist. Promises are behaving a little weird.

--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,7 @@
 
         <div id="playerNode"></div>
         <div id="playlistContainer" class="playlistContainer">
+          <div id="playlistButton"></div>
           <div id="playlistNode"></div>
         </div>
       </div>
