--- a/src/index.html
+++ b/src/index.html
@@ -1,61 +1,87 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="utf-8">
-    <title>festival playlists</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-
-    <link rel="stylesheet" href="$views/css/buttons.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title data-i18n-title></title>
+    <!-- Include the stylesheets you need for the Views components -->
+    <!-- See https://developer.spotify.com/technologies/apps/docs/preview/views/ -->
     <link rel="stylesheet" href="$views/css/image.css">
     <link rel="stylesheet" href="$views/css/list.css">
-    <link rel="stylesheet" href="$views/css/popup.css">
-    <link rel="stylesheet" href="$views/css/tabbar.css">
-    <link rel="stylesheet" href="$views/css/throbber.css">
-    
-    <link href="css/main.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="$views/css/buttons.css">
+    <!-- <link rel="stylesheet" href="$views/css/throbber.css"> -->
+    <link rel="stylesheet" href="css/style.css">
+<!--    <link href='http://fonts.googleapis.com/css?family=Noto+Sans:400,700|Lobster' rel='stylesheet' type='text/css'>-->
+    <!-- If you are using the preview SDK for webplayer then uncomment the script below -->
+    <!--script src="http://d1hza3lyffsoht.cloudfront.net/preview-sdk/bootstrap.js"></script-->
+  </head>
   <body>
-
-    <div class="brandbar">
-      <h1>festival playlists</h1>  
-    </div>
 
     <div class="offlineContainer">
       <div class="message box">
-        <h1>Festival Playlists does not work in offline mode</h1>
-        <span>Please check your connection or disable offline mode</span>
+        <h1 data-i18n-offline></h1>
+        <span data-i18n-offline-message></span>
       </div>
     </div>
 
     <div class="container">
+      <header>
+        <div class="logo" style="font-family: Lobster"><span data-i18n-heading></span></div>
+      </header>
 
-      <div class="festivals box">
-        <h2>1. Select a festival ...</h2>
-        <ul id="festivalsList"></ul>
-      </div>
+        <div class="box">
+          <div class="festivals">
+            <h2 data-i18n-festivals-heading></h2>
+            <h3></h3>
 
-      <div class="stages box">
-        <h2>2. ... and stages, to generate ...</h2>
-        <p>
-          <ul id="stagesList"></ul>
-        </p>
-     </div>
+            <div class="filterBox">
+              <input type="search" results="0" data-i18n-festivals-filter></input>
+            </div>
+
+            <ul id="festivalsList"></ul>
+
+            <div class="actionBox">
+              <button type="button" class="sp-button load"><span class="sp-button-text"><div class="sp-button-icon"></div><span data-i18n-festivals-load></span></span><span class="sp-button-background"></span></button>
+            </div>
+          </div>
+
+          <div class="stages">
+            <h2 data-i18n-stages-heading></h2>
+            <h3></h3>
+
+            <div class="filterBox">
+              <button type="button" class="sp-button filter-all"><span class="sp-button-text all"><div class="sp-button-icon"></div><span data-i18n-stages-filter-all></span></span><span class="sp-button-background"></span></button>
+              <button type="button" class="sp-button filter-none"><span class="sp-button-text none"><div class="sp-button-icon"></div><span data-i18n-stages-filter-none></span></span><span class="sp-button-background"></span></button>
+            </div>
+
+            <ul id="stagesList"></ul>
+
+            <div class="actionBox">
+                <button type="button" class="sp-button load"><span class="sp-button-text"><div class="sp-button-icon"></div><span data-i18n-stages-load></span><span class="sp-button-background"></span></span></button>
+            </div>
+         </div>
 
 
-      <div class="playlists box">
-        <h2>3. ... your festival playlist!</h2>
+          <div class="playlists">
+            <h2 data-i18n-tracks-heading></h2>
+            <h3></h3>
 
-        <div id="playerNode"></div>
-        <div id="playlistContainer" class="playlistContainer">
-          <div id="playlistButton"></div>
-          <div id="playlistNode"></div>
+            <div id="playerNode"></div>
+            <div id="playlistContainer" class="playlistContainer">
+              <div id="playlistButton"></div>
+              <div id="playlistNode"></div>
+            </div>
+          </div>
         </div>
-      </div>
+
+      <h1 data-i18n-tracks-heading></h2>
+      <div id="buttonContainer"></div>
+      <div id="playlistContainer"></div>
+
+      <div id="albumCoverContainer"></div>
     </div>
 
-    <script src="js/app.js"></script>
 
+    <script src="scripts/main.js"></script>
   </body>
 </html>
